<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/navigation_bar_bg">

    <TextView
        android:id="@+id/tv_main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="15dp"
        android:text="@string/main_title"
        android:textColor="@color/white"
        android:textSize="28sp"></TextView>

    <TextView
        android:id="@+id/tv_main_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="40dp"
        android:layout_toRightOf="@+id/tv_main_title"
        android:background="@drawable/menu_bg_selector"
        android:drawableLeft="@drawable/ic_play_selector"
        android:drawablePadding="10dp"
        android:focusable="true"
        android:nextFocusLeft="@null"
        android:nextFocusRight="@id/tv_main_edit"
        android:nextFocusUp="@null"
        android:text="@string/player"
        android:textColor="@color/text_color_selector"
        android:textSize="20sp"></TextView>

    <TextView
        android:id="@+id/tv_main_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="40dp"
        android:layout_toRightOf="@+id/tv_main_play"
        android:background="@drawable/menu_bg_selector"
        android:drawableLeft="@drawable/ic_edit_selector"
        android:drawablePadding="10dp"
        android:focusable="true"
        android:nextFocusLeft="@id/tv_main_play"
        android:nextFocusRight="@id/tv_mian_refresh"
        android:nextFocusUp="@null"
        android:text="@string/edit"
        android:textColor="@color/text_color_selector"
        android:textSize="20sp"></TextView>

    <TextView
        android:id="@+id/tv_mian_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="40dp"
        android:layout_toRightOf="@+id/tv_main_edit"
        android:background="@drawable/menu_bg_selector"
        android:drawableLeft="@drawable/ic_refresh_selector"
        android:drawablePadding="10dp"
        android:focusable="true"
        android:nextFocusLeft="@id/tv_main_edit"
        android:nextFocusRight="@id/tv_main_settings"
        android:nextFocusUp="@null"
        android:text="@string/refresh"
        android:textColor="@color/text_color_selector"
        android:textSize="20sp"></TextView>

    <TextView
        android:id="@+id/tv_main_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="15dp"
        android:background="@drawable/menu_bg_selector"
        android:drawableLeft="@drawable/icon_settings_selector"
        android:drawablePadding="10dp"
        android:focusable="true"
        android:nextFocusLeft="@id/tv_mian_refresh"
        android:nextFocusRight="@null"
        android:nextFocusUp="@null"
        android:text="@string/settings"
        android:textColor="@color/text_color_selector"
        android:textSize="20sp"></TextView>

</RelativeLayout>